fixed alignment finished annotated row component with expand and close option
TODO:
- add popup with overlay for juridischschema
- Add edit feature

--- a/frontend/src/app/annotation-view/annotation-view.module.css
+++ b/frontend/src/app/annotation-view/annotation-view.module.css
@@ -1,11 +1,18 @@
 .title {
     color: #154270;
+    margin: 3rem;
 }
 
 .image {
-    max-width: 400px;
+    max-width: 200px;
+
+    display: block;
+    margin-left: auto;
 }
 
+.topBar {
+    display: flex;
+}
 .annotatedRow {
     margin: 1rem;
 }
